# calico

./: Dockerfile  README.md  config.example.yml  docker-compose.yml  pyproject.toml
src/: __main__.py  bot.py
src/database/: __init__.py  models.py  orm.py
src/exts/events/: __init__.py  on_member_join.py  on_member_remove.py  on_member_update.py  on_message.py  on_raw_bulk_message_delete.py  on_raw_message_delete.py
src/utils/: __init__.py  config.py  sync.py
